--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Welcome To My Digital Sanctum</h1>
 
-I had to change along with my view.
-<p>My first paragraph.</p>
+
+This is a place for new friends to visit and engage with my ideas, 
+visions, projects, etc. 
+
+
 
 </body>
 </html>
