--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ This is a place for new friends to visit and engage with my ideas,
 visions, projects, etc. 
 
 
+Can changes be updated now? 
 
 </body>
 </html>
