--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <style>
@@ -64,7 +65,7 @@
 <h1>Welcome To My Digital Sanctum</h1>
 <nav id="myNav">
   <a href="#home">Home</a>
-  <a href="blog.html">Blog</a>
+  <a href="#Blog">Blog</a>
   <a href="#About">About</a>
   <a href="#contact">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
@@ -81,11 +82,11 @@ function toggleMenu() {
 }
 </script>
 
-This is a place for new friends to visit and engage with my ideas, 
-visions, projects, etc. 
 
+This is your new spot for discovering this weeks' rabbithole.
 
-Can changes be updated now? 
+ I will be uploading "articles" here. 
+ The topics will vary quite a lot so I recommend that the user check in regularly and observe the format of the webpage (which I hope to improve in various ways).
 
 
 
