--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 
 <!DOCTYPE html>
 <html>
+
 	<head>
 	  <link rel="stylesheet" href="styles.css">
+	  </head>
 
-	</head>
 <body>
 
-<h1>Welcome To My Digital Sanctum</h1>
-
+<h1>Gabrieltron</h1>
 <nav id="myNav">
   <a href="index.html">Home</a>
   <a href="blog.html">Blog</a>
@@ -16,6 +16,7 @@
   <a href="contact.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
 </nav>
+
 <script>
 function toggleMenu() {
   var nav = document.getElementById("myNav");
@@ -27,12 +28,19 @@ function toggleMenu() {
 }
 </script>
 
+<!-- -->
 
-This is your new spot for discovering this weeks' rabbithole.
+<div class="ct">
+I grew up in the San Fernando Valley during the 90's.
+Kurt Cobain was a fading memory and music and culture
+had a life that one doesn't find these days. 
+The multiverse perpetuated by modern day technology and algorithms was at best the fantasy of some 
+autocratic tech bussiness man child.
+</div>
 
- I will be uploading "articles" here. 
- The topics will vary quite a lot so I recommend that the user check in regularly
- and observe the format of the webpage (which I hope to improve in various ways).
+
+
+
 
 
 
