--- a/about.html
+++ b/about.html
@@ -2,29 +2,29 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-	  <link rel="stylesheet" href="styles.css">
-	  </head>
+<head>
+<link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
 
 <h1>Gabrieltron</h1>
 <nav id="myNav">
-  <a href="index.html">Home</a>
-  <a href="blog.html">Blog</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-  <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
+<a href="index.html">Home</a>
+<a href="blog.html">Blog</a>
+<a href="about.html">About</a>
+<a href="contact.html">Contact</a>
+<a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
 </nav>
 
 <script>
 function toggleMenu() {
-  var nav = document.getElementById("myNav");
-  if (nav.className === "") {
-    nav.className = "responsive";
-  } else {
-    nav.className = "";
-  }
+var nav = document.getElementById("myNav");
+if (nav.className === "") {
+nav.className = "responsive";
+} else {
+nav.className = "";
+}
 }
 </script>
 
@@ -38,11 +38,53 @@ The multiverse perpetuated by modern day technology and algorithms was at best t
 autocratic tech bussiness man child.
 </div>
 
+	<br></br>
+	<br></br>
+	<br></br>
+
+	<div class="ct">
+		<strong>	On ART</strong>
+		</div>
+<div class="ct">
+Despite being rather musically inclinded-listening to music all alone in private as a child
+and starting up my first instrument in middle school-I never really considered myself
+artistic before a couple of years ago.
+
+This is in muted contrast to the fact that
+I thought of myself as a right brained person, because I 
+enjoyed reading books slightly more than the average peer.
 
 
+It started off by workplace boredom (something which, given my
+current lack of employment sounds great) that
+I sought to fight off without using my phone.
+ 
+
+I was working at a school helping to watch over troublesome teens.
+
+One teacher had a particularly firm grasp on her little hoodlums. 
+This left me to my own devices for large swathes of my time in her classroom and it wasn't before
+long that I decied to grab a piece of scrap paper and just doodle away. 
+
+I'd never really doodled as a young person. 
+That isn't to say I never tried. 
+It just never worked out and (along with my horrific handwriting) I reasoned I wasn't one of those
+kids that can draw. 
 
 
+Anyway, it went pretty bad but it was mildly amusing and so it became a habit that due to my
+neurotic nature became a real HABIT. 
+It wasn't long, perhaps a day or two before I figured i'd come 
+in with a photo on my phone (the original thing I was trying to avoid) that I wanted to draw. 
 
+The kids thought it looked close-ish and I gained points with them.
+
+THose points were motivation and that quickly became a motivation
+to improve my drawing...
+
+	<br></br>
+	<br></br>
+</div>
 
 
 </body>
