--- a/blog.html
+++ b/blog.html
@@ -2,12 +2,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 	  <link rel="stylesheet" href="styles.css">
 
 	</head>
 <body>
 
-<h1>Welcome To My Digital Sanctum</h1>
+<h1>Gabrieltron</h1>
 
 <nav id="myNav">
   <a href="index.html">Home</a>
@@ -28,11 +29,13 @@ function toggleMenu() {
 </script>
 
 
+<div class="ct">
 This is your new spot for discovering this weeks' rabbithole.
 
  I will be uploading "articles" here. 
  The topics will vary quite a lot so I recommend that the user check in regularly
  and observe the format of the webpage (which I hope to improve in various ways).
+ </div>
 
 
 
