--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 	<head>
 	  <link rel="stylesheet" href="styles.css">
+	  <script async src="https://www.instagram.com/embed.js"></script>
+
 	  </head>
 <body>
 
-<h1>Welcome To My Digital Sanctum</h1>
+<h1>Gabrieltron</h1>
 <nav id="myNav">
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <a href="blog.html">Blog</a>
   <a href="about.html">About</a>
-  <a href="#contact">Contact</a>
+  <a href="contact.html">Contact</a>
   <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
 </nav>
 
@@ -25,8 +27,22 @@ function toggleMenu() {
 }
 </script>
 
-This is a place for new friends to visit and engage with my ideas, 
-visions, projects, etc. 
+
+<div class="ct">
+Welcome to my webpage. 
+
+I go by Gabrieltron or just Gabriel for short. 
+
+I am based out of Los Angeles. 
+
+Visit my instagram @gabrieltron and say hello. 
+
+This webpage is a homebase for my thoughts and art. 
+
+</div>
+
+
+
 
 
 
