--- a/about.html
+++ b/about.html
@@ -82,6 +82,10 @@ The kids thought it looked close-ish and I gained points with them.
 THose points were motivation and that quickly became a motivation
 to improve my drawing...
 
+
+It took a while but eventually I started to realize that I wasn't really in my usual state of mind,
+as I drew.
+
 	<br></br>
 	<br></br>
 </div>
